Abstracted Action mailer so now it can be whatever body and subject it wants instead of editting view templates

--- a/app/views/user_mailer/email.html.erb
+++ b/app/views/user_mailer/email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>It worked!!!, <%= @user %></h1>
-    <p>Thanks for playing and have a great day!</p>
+    Hello, <%= @user %> <br>
+      <%= params[:body] %>
   </body>
 </html>
